# wasm_webgpu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_DAWN.md  make.bat  shell.html  test.py
clear_screen/: clear_screen.c  clear_screen_sync.c
failing_shader_compilation/: failing_shader_compilation.c
gpu_oom/: gpu_oom.c
hello_triangle/: hello_triangle.c  hello_triangle_minimal.c  hello_triangle_verbose.c
idl/: common.idl  lib_webgpu_strings.h  parser.out  webgpu.idl  webgpu_api_generator.py
lib/: gen_webgpu_strings.js  lib_demo.h  lib_webgpu.cpp  lib_webgpu.h  lib_webgpu.js  lib_webgpu_cpp11.cpp  lib_webgpu_cpp20.cpp  lib_webgpu_dawn.cpp  lib_webgpu_fwd.h  lib_webgpu_lean.h  lib_webgpu_lean.js  lib_webgpu_strings.h  library_miniprintf.js  webgpu-closure-externs.js  webgpu_closure_externs.js
samples/: CMakeLists.txt  README.md  shell.html
samples/buffer_map_sync/: buffer_map_sync.c
samples/clear_screen/: clear_screen.c  clear_screen_sync.c
samples/common/: lib_demo.js  miniprintf.h
samples/failing_shader_compilation/: failing_shader_compilation.c
samples/gpu_oom/: gpu_oom.c
samples/hello_triangle/: hello_triangle_minimal.c  hello_triangle_verbose.c
samples/offscreen_canvas/: offscreen_canvas.c  offscreen_canvas_proxy_to_pthread.c  offscreen_canvas_pthread.c
samples/texture/: license.txt  texture.c
samples/vertex_buffer/: vertex_buffer.c
scripts/: compress_strings.js
test/: canvas_transfer_control_to_offscreen.cpp  navigator_delete_webgpu_api_access.cpp  navigator_gpu_available.cpp  navigator_gpu_get_preferred_canvas_format.cpp  navigator_gpu_get_wgsl_language_features.cpp  navigator_gpu_is_wgsl_language_feature_supported.cpp  navigator_gpu_request_adapter_async.compatibility_mode.cpp  navigator_gpu_request_adapter_async.cpp  navigator_gpu_request_adapter_async.force_fallback.cpp  navigator_gpu_request_adapter_async.high_performance.cpp  navigator_gpu_request_adapter_async.low_power.cpp  navigator_gpu_request_adapter_async.options.cpp  navigator_gpu_request_adapter_async.xr_compatible.cpp  navigator_gpu_request_adapter_async_simple.cpp  navigator_gpu_request_adapter_sync.cpp  navigator_gpu_request_adapter_sync_simple.cpp  offscreen_canvas_create.cpp  offscreen_canvas_destroy.cpp  offscreen_canvas_height.cpp  offscreen_canvas_is_valid.cpp  offscreen_canvas_post_to_pthread.cpp  offscreen_canvas_post_to_worker.cpp  offscreen_canvas_post_to_worker_and_pthread.cpp  offscreen_canvas_set_size.cpp  offscreen_canvas_size.cpp  offscreen_canvas_width.cpp  wgpu_adapter_get_features.cpp  wgpu_adapter_get_info.cpp  wgpu_adapter_get_limits.cpp  wgpu_adapter_info_is_fallback.cpp  wgpu_adapter_is_fallback_adapter.cpp  wgpu_adapter_request_device_async.cpp  wgpu_adapter_request_device_async.default_queue_label.cpp  wgpu_adapter_request_device_async.queue_label.cpp  wgpu_adapter_request_device_async.required_limits_32bit.cpp  wgpu_adapter_request_device_async.unsupported_feature.cpp  wgpu_adapter_request_device_async_simple.cpp  wgpu_adapter_request_device_sync.cpp  wgpu_adapter_request_device_sync_simple.cpp  wgpu_adapter_supports_feature.cpp  (+277 more)
texture/: texture.c
vertex_buffer/: vertex_buffer.c
